fixed wording and only show contest on mobile

--- a/www/css/styles.less
+++ b/www/css/styles.less
@@ -1119,6 +1119,7 @@ section.entourage {
             font-style: normal;
         }
         .contest_rules {
+            margin-top: 15px;
             padding: 15px;
             border: 1px solid grey;
         }
